使用主从多线程reator模型实现cpp高并发服务器

--- a/project/Makefile
+++ b/project/Makefile
@@ -8,13 +8,13 @@ server:
 	g++ $(G++FLAGS) $(SRC) server.cpp $(BUILD) 
 
 client:
-	g++ src/util.cpp src/Buffer.cpp src/Socket.cpp src/InetAddress.cpp client.cpp -o $(BUILD_DIR)/client 
+	g++ src/util.cpp src/Buffer.cpp src/Socket.cpp client.cpp -o $(BUILD_DIR)/client 
 
 clean:
 	rm $(BUILD_DIR)/server && rm $(BUILD_DIR)/client && rm $(BUILD_DIR)/test
 
 test:
-	g++ src/util.cpp src/Buffer.cpp src/Socket.cpp src/InetAddress.cpp src/ThreadPool.cpp \
+	g++ src/util.cpp src/Buffer.cpp src/Socket.cpp src/ThreadPool.cpp \
 	$(G++FLAGS) test.cpp -o $(BUILD_DIR)/test
 
-all: server client
+all: server client test
